--- a/q_app2/CMakeLists.txt
+++ b/q_app2/CMakeLists.txt
@@ -9,6 +9,10 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+if (WIN32)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS=1)
+endif(WIN32)
+
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
 
@@ -19,6 +23,10 @@ set(PROJECT_SOURCES
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
+        renderareatoo.cpp
+        renderareatoo.h
+        renderareatoo.ui
+        DebuggingConsole.h
         ${TS_FILES}
 )
 
