--- a/ammeraal/1.1/CMakeLists.txt
+++ b/ammeraal/1.1/CMakeLists.txt
@@ -76,3 +76,10 @@ install(TARGETS simpledraw
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(simpledraw)
 endif()
+
+
+# mocs_compilation_Debug.cpp
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX sources)
+# C:\Users\yyk\src\qt_junk\ammeraal\build-cmake-win64\1.1\simpledraw_autogen\include_Debug\EWIEGA46WW\moc_simpledraw.cpp
+message(STATUS "CMAKE_CURRENT_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}")
+source_group(TREE ${CMAKE_CURRENT_BINARY_DIR}/simpledraw_autogen PREFIX generated)
