--- a/ammeraal/CMakeLists.txt
+++ b/ammeraal/CMakeLists.txt
@@ -18,3 +18,4 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 add_subdirectory(1.1)
 add_subdirectory(1.3)
+add_subdirectory(1.3a)
