--- a/ammeraal/CMakeLists.txt
+++ b/ammeraal/CMakeLists.txt
@@ -19,3 +19,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 add_subdirectory(1.1)
 add_subdirectory(1.3)
 add_subdirectory(1.3a)
+add_subdirectory(1.4)
+
+# end of file
