--- a/ammeraal/CMakeLists.txt
+++ b/ammeraal/CMakeLists.txt
@@ -21,5 +21,6 @@ add_subdirectory(1.3)
 add_subdirectory(1.3a)
 add_subdirectory(1.4)
 add_subdirectory(1.5)
+add_subdirectory(1.6)
 
 # end of file
