--- a/ammeraal/CMakeLists.txt
+++ b/ammeraal/CMakeLists.txt
@@ -22,5 +22,6 @@ add_subdirectory(1.3a)
 add_subdirectory(1.4)
 add_subdirectory(1.5)
 add_subdirectory(1.6)
+add_subdirectory(1.7)
 
 # end of file
