--- a/ammeraal/2.1/CMakeLists.txt
+++ b/ammeraal/2.1/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-set (SINGLE_TARGET calculate)
+set (SINGLE_TARGET drawpolygon)
 
 project(${SINGLE_TARGET} VERSION 0.1 LANGUAGES CXX)
 
@@ -19,6 +19,7 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
 set(PROJECT_SOURCES
     ${SINGLE_TARGET}.cpp
     ${SINGLE_TARGET}.h
+    ${SINGLE_TARGET}main.cpp
     ${TS_FILES}
 )
 
