--- a/ammeraal/CMakeLists.txt
+++ b/ammeraal/CMakeLists.txt
@@ -23,9 +23,12 @@ add_subdirectory(1.4)
 add_subdirectory(1.5)
 add_subdirectory(1.6)
 add_subdirectory(1.7)
+
 add_subdirectory(2.1)
 add_subdirectory(2.2)
 add_subdirectory(2.3)
 add_subdirectory(2.4)
+
+add_subdirectory(3.1)
 
 # end of file
