Add common/ folder

--- a/ammeraal/2.2/CMakeLists.txt
+++ b/ammeraal/2.2/CMakeLists.txt
@@ -20,7 +20,7 @@ set(PROJECT_SOURCES
     ${SINGLE_TARGET}.cpp
     ${SINGLE_TARGET}.h
     ${SINGLE_TARGET}main.cpp
-    points.h
+    ../common/points.h
     triangulate.cpp
     triangulate.h
     drawpolygon.cpp
