--- a/ammeraal/3.1/CMakeLists.txt
+++ b/ammeraal/3.1/CMakeLists.txt
@@ -20,9 +20,9 @@ set(PROJECT_SOURCES
     ${SINGLE_TARGET}.cpp
     ${SINGLE_TARGET}.h
     ${SINGLE_TARGET}main.cpp
-    ../3.1/basic3d.cpp
-    ../3.1/basic3d.h
-    ../3.1/points.h
+    ../common/basic3d.cpp
+    ../common/basic3d.h
+    ../common/points.h
     ${TS_FILES}
 )
 
