--- a/QtApps/ExtraDialogs/ExtraDialogs.vcxproj.filters
+++ b/QtApps/ExtraDialogs/ExtraDialogs.vcxproj.filters
@@ -23,22 +23,29 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <QtRcc Include="app1.qrc">
-      <Filter>Resource Files</Filter>
-    </QtRcc>
-    <QtUic Include="app1.ui">
-      <Filter>Form Files</Filter>
-    </QtUic>
-    <QtMoc Include="app1.h">
+    <ClInclude Include="extradialogs_global.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <QtMoc Include="ExtraDialogs.h">
       <Filter>Header Files</Filter>
     </QtMoc>
-    <ClCompile Include="app1.cpp">
+    <ClCompile Include="ExtraDialogs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="errorlogdialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="errorlogdialog.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <QtUic Include="errorlogdialog.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
   </ItemGroup>
 </Project>
