--- a/ammeraal/1.1/CMakeLists.txt
+++ b/ammeraal/1.1/CMakeLists.txt
@@ -78,7 +78,8 @@ endif()
 # mocs_compilation_Debug.cpp
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX sources)
 # C:\Users\yyk\src\qt_junk\ammeraal\build-cmake-win64\1.1\simpledraw_autogen\include_Debug\EWIEGA46WW\moc_simpledraw.cpp
-source_group(TREE ${CMAKE_CURRENT_BINARY_DIR}/simpledraw_autogen PREFIX generated)
-
+if (EXISTS ${CMAKE_CURRENT_BINARY_DIR}/simpledraw_autogen)
+	source_group(TREE ${CMAKE_CURRENT_BINARY_DIR}/simpledraw_autogen PREFIX generated)
+endif()
 get_filename_component(folder_name ${CMAKE_CURRENT_SOURCE_DIR}  NAME)
 set_property(TARGET simpledraw PROPERTY FOLDER ${folder_name})
