Add QTextBrowser (WIP)

--- a/QtVsTools/html_renderer_q5/html_renderer_q5.vcxproj
+++ b/QtVsTools/html_renderer_q5/html_renderer_q5.vcxproj
@@ -95,6 +95,9 @@
     <ClCompile Include="html_renderer_q5.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="example.html" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
