--- a/QtVsTools/html_renderer_q5/html_renderer_q5.vcxproj.filters
+++ b/QtVsTools/html_renderer_q5/html_renderer_q5.vcxproj.filters
@@ -21,6 +21,9 @@
       <UniqueIdentifier>{639EADAA-A684-42e4-A9AD-28FC9BCB8F7C}</UniqueIdentifier>
       <Extensions>ts</Extensions>
     </Filter>
+    <Filter Include="examples">
+      <UniqueIdentifier>{d0fa04e2-2090-41fb-b3f1-1932f0ac11ba}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="html_renderer_q5.qrc">
@@ -40,5 +43,10 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="example.html">
+      <Filter>examples</Filter>
+    </None>
   </ItemGroup>
 </Project>
