--- a/QtVsTools/html_renderer_q5/html_renderer_q5.vcxproj
+++ b/QtVsTools/html_renderer_q5/html_renderer_q5.vcxproj
@@ -89,14 +89,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="renderdialogtoo.cpp" />
     <QtRcc Include="html_renderer_q5.qrc" />
     <QtUic Include="html_renderer_q5.ui" />
     <QtMoc Include="html_renderer_q5.h" />
     <ClCompile Include="html_renderer_q5.cpp" />
     <ClCompile Include="main.cpp" />
+    <QtUic Include="renderdialogtoo.ui" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.clang-format" />
     <None Include="example.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="renderdialogtoo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
