--- a/QtVsTools/html_renderer_q5/html_renderer_q5.vcxproj.filters
+++ b/QtVsTools/html_renderer_q5/html_renderer_q5.vcxproj.filters
@@ -43,10 +43,24 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="renderdialogtoo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="example.html">
       <Filter>examples</Filter>
     </None>
+    <None Include="..\.clang-format" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtUic Include="renderdialogtoo.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="renderdialogtoo.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
 </Project>
