--- a/q_app2/CMakeLists.txt
+++ b/q_app2/CMakeLists.txt
@@ -51,6 +51,7 @@ else()
     else()
         add_executable(q_app2
             ${PROJECT_SOURCES}
+            renderareatoo.h renderareatoo.cpp
         )
     endif()
 
