--- a/table_view/table_view/CMakeLists.txt
+++ b/table_view/table_view/CMakeLists.txt
@@ -14,9 +14,9 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 set(PROJECT_SOURCES
         main.cpp
-        dialog.cpp
-        dialog.h
-        dialog.ui
+        main_dialog.cpp
+        main_dialog.h
+        main_dialog.ui
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
