--- a/table_view/table_view/CMakeLists.txt
+++ b/table_view/table_view/CMakeLists.txt
@@ -39,6 +39,7 @@ else()
     else()
         add_executable(table_view
             ${PROJECT_SOURCES}
+            tablemodel.cpp
         )
     endif()
 endif()
